# ddfr

./: .gitignore  CMakeLists.txt  README.md
res/: ddfr.rc
src/: AppSettings.cxx  AppSettings.hxx  AppSingleton.cxx  AppSingleton.hxx  AppWindow.qml  BoolSetting.qml  ConfirmWindow.qml  DarkPalette.qml  FileListDelegate.qml  FileListModel.cxx  FileListModel.hxx  FileListView.qml  LightPalette.qml  ListSetting.qml  MessageWindow.qml  SettingsWindow.qml  main.cxx  tr-strings.cxx
translations/: lang_en_US.ts  lang_ru_RU.ts
